feat: :sparkles: create and execute payment scenarios
